More methods docummented
